--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
+    "bootstrap": "4.3.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "redux": "4.0.1"
